--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 
     <!-- Página 1 -->
     <div class="page active" id="page1">
-        <h1>Mais um ano de namoro juntos! ❤</h1>
+        <h1>Mais um ano de namoro juntos!</h1>
         <button class="btn" onclick="showPage(2)">Clique aqui para continuar</button>
     </div>
 
@@ -304,7 +304,7 @@
         <h2>Você gostaria de ouvir nossa música?</h2>
         <div class="options">
             <button class="btn" onclick="showPage(3)">Yes ❤</button>
-            <button class="btn" onclick="showPage(3)">Não 😡</button>
+            <button class="btn" onclick="showPage(3)">no 😡</button>
         </div>
     </div>
 
@@ -312,7 +312,7 @@
     <div class="page" id="page3">
         <h2>Te dedico cada verso dessa linda canção</h2>
         <div class="spotify-embed">
-            <iframe id="spotify-iframe" src="https://open.spotify.com/embed/track/4cOdK2wGLETKBW3PvgPWqT" width="100%" height="100%" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            <iframe id="spotify-iframe" src="https://open.spotify.com/embed/track/4vgU9MGJwhgBEtlO8mMN49?utm_source=generator" width="100%" height="100%" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
         </div>
         <button class="btn" onclick="showPage(4)">Clique aqui para continuar</button>
     </div>
@@ -343,8 +343,8 @@
         </div>
         <h2>Você gostaria de ver a quanto tempo estamos juntos?</h2>
         <div class="options">
-            <button class="btn" onclick="showPage(6)">Sim 🥰</button>
-            <button class="btn" onclick="showPage(6)">Não 🥺</button>
+            <button class="btn" onclick="showPage(6)">yes 🥰</button>
+            <button class="btn" onclick="showPage(6)">no 🥺</button>
         </div>
     </div>
 
